--- a/ModulRplus/AndroidManifest.xml
+++ b/ModulRplus/AndroidManifest.xml
@@ -22,9 +22,27 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.rplus.modulrplus.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            
+
+        </activity>
+        
+        <activity
+            android:name="com.rplus.modulrplus.Activity2"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            
+            >
+            <intent-filter>
+                
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -34,7 +52,6 @@
 				<category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
         
  	<service android:name="AccountAuthenticatorService">
     <intent-filter>
